--- a/index.html
+++ b/index.html
@@ -3,11 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <body>
 
-<form></form>
+<h1>The Code Review</h1>
+
+<h1>Signup for our Newsletter</h1>
+
+<h2>Get the latest news on how your code is doing right in your inbox</h2>
+
+
+
+<form>
+
+<!-- ADD THIS IN LATER Contact Information -->
+
+
+</form>
 
   </body>
 </html>
