--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 
   <body>
 
+<header class="header">
 <h1>The Code Review</h1>
+</header>
 
-<h1>Signup for our Newsletter</h1>
+<h3 class="subheader">Signup for our newsletter</h3>
 
-<h2>Get the latest news on how your code is doing right in your inbox</h2>
+<h4 class="third_header">Get the latest news on how your code is doing right in your inbox</h4>
 
+<hr class="first_line">
 
+<hr>
 
 <form>
 
@@ -25,13 +29,13 @@
 
 <fieldset>
 
-  <legend>Contact Information</legend>
+  <legend><h3>Contact Information</h3></legend>
 
   <label for="name">Full Name</label>
-  <input type="text" id="name" name="full_name">
+  <input type="text" id="name" name="full_name" placeholder="Required">
 
   <label for="email">Email Address</label>
-  <input type="email" id="email" name="email_address">
+  <input type="email" id="email" name="email_address" placeholder="Required">
 
   <label for="phone">Phone Number</label>
   <input type="telephone" id="phone" name="phone_num">
