--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
   <label for="zip">Zip Code</label>
   <input type="text" id="zip" name="user_zip">
 
+  </fieldset>
+
+<hr class="second_line">
+
+  <fieldset>
+
+    <legend class="news"><h3>Newsletter</h3></legend>
+
+<p>Select the newsletters you would like to receive</p>
 
   <input type="checkbox" id="news" value="html_news" name="newsletter"><label for="coding">HTML News</label><br>
   <input type="checkbox" id="css_news" value="css_news" name="newsletter"><label for="coding">CSS News</label><br>
@@ -72,14 +81,15 @@
   <label for="topics">Other topics you'd like to hear about</label>
   <textarea id="topics" name="topic_ideas"></textarea>
 
-</fieldset>
+
 
 <button type="submit">Sign Up</button>
 
-<p>Copyright The Code Review</p>
-
+</fieldset>
 
 </form>
+
+<p>Copyright The Code Review</p>
 
   </body>
 </html>
