Continuing to make changes

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <input type="radio" id="html" value="html" name="html"><label for="html">HTML</label><br>
   <input type="radio" id="plain_text" value="plain_text" name="plain_text"><label for="plain_text">Plain Text</label>
 
-  <label for="topics">Other topics you'd like to hear about</label>
+  <label class="topics" for="topics">Other topics you'd like to hear about</label>
   <textarea id="topics" name="topic_ideas"></textarea>
 
 
