--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <h3 class="subheader">Signup for our newsletter</h3>
 
-<h4 class="third_header">Get the latest news on how your code is doing right in your inbox</h4>
+<p class="third_header">Get the latest news on how your code is doing right in your inbox</p>
 
 <hr class="first_line">
 
@@ -48,6 +48,7 @@
 
   <label for="state">State</label>
   <select id="state" name="user_state">
+    <option selected="selected" value>Choose State</option>
     <option value="alaska">AK</option>
     <option value="california">CA</option>
     <option value="florida">FL</option>
@@ -55,6 +56,7 @@
     <option value="new_york">NY</option>
     <option value="north_carolina">NC</option>
     <option value="texas">TX</option>
+  </select>
 
 
   <label for="zip">Zip Code</label>
