--- a/index.html
+++ b/index.html
@@ -76,11 +76,12 @@
   <input type="checkbox" id="css_news" value="css_news" name="newsletter"><label for="coding">CSS News</label><br>
   <input type="checkbox" id="javascript_news" value="javascript_news" name="newsletter"><label for="coding">Javascript News</label><br>
 
+<p>Newsletter format</p>
 
   <input type="radio" id="html" value="html" name="html"><label for="html">HTML</label><br>
   <input type="radio" id="plain_text" value="plain_text" name="plain_text"><label for="plain_text">Plain Text</label>
 
-  <label class="topics" for="topics">Other topics you'd like to hear about</label>
+  <p><label class="topics" for="topics">Other topics you'd like to hear about</label></p>
   <textarea id="topics" name="topic_ideas"></textarea>
 
 
