Working on the desktop layout

--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
 
 <form>
 
-
-
 <fieldset>
 
   <legend><h3>Contact Information</h3></legend>
 
+  <div class="wrapper">
   <label for="name">Full Name</label>
   <input type="text" id="name" name="full_name" placeholder="Required">
 
@@ -62,6 +61,7 @@
   <label for="zip">Zip Code</label>
   <input type="text" id="zip" name="user_zip">
 
+</div>
   </fieldset>
 
 <hr class="second_line">
