--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Online Registration Form</title>
     <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -27,7 +27,7 @@
 
 <fieldset>
 
-  <legend><h3>Contact Information</h3></legend>
+  <legend class="contact">Contact Information</legend>
 
   <div class="wrapper">
   <label for="name">Full Name</label>
@@ -36,8 +36,8 @@
   <label for="email">Email Address</label>
   <input type="email" id="email" name="email_address" placeholder="Required">
 
-  <label for="phone">Phone Number</label>
-  <input type="telephone" id="phone" name="phone_num">
+  <label for="tel">Phone Number</label>
+  <input type="tel" id="phone" name="phone_num">
 
   <label for="address">Street Address</label>
   <input type="text" id="address" name="user_address">
@@ -68,13 +68,13 @@
 
   <fieldset>
 
-    <legend class="news"><h3>Newsletter</h3></legend>
+    <legend class="news">Newsletter</legend>
 
 <p>Select the newsletters you would like to receive</p>
 
-  <input type="checkbox" id="news" value="html_news" name="newsletter"><label for="coding">HTML News</label><br>
-  <input type="checkbox" id="css_news" value="css_news" name="newsletter"><label for="coding">CSS News</label><br>
-  <input type="checkbox" id="javascript_news" value="javascript_news" name="newsletter"><label for="coding">Javascript News</label><br>
+  <input type="checkbox" id="news" value="html_news" name="newsletter"><label for="news">HTML News</label><br>
+  <input type="checkbox" id="css_news" value="css_news" name="newsletter"><label for="css_news">CSS News</label><br>
+  <input type="checkbox" id="javascript_news" value="javascript_news" name="newsletter"><label for="javascript_news">Javascript News</label><br>
 
 <p>Newsletter format</p>
 
