--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
   <legend class="contact">Contact Information</legend>
 
   <label for="name">Full Name</label>
-  <input type="text" id="name" name="full_name" placeholder="Required">
+  <input required type="text" id="name" name="full_name" placeholder="Required">
 
   <label for="email">Email Address</label>
-  <input type="email" id="email" name="email_address" placeholder="Required">
+  <input required type="email" id="email" name="email_address" placeholder="Required">
 
   <label for="tel">Phone Number</label>
-  <input type="tel" id="phone" name="phone_num">
+  <input type="tel" id="phone" name="phone_num" placeholder="What's yo numba?">
 
   <label for="address">Street Address</label>
-  <input type="text" id="address" name="user_address">
+  <input type="text" id="address" name="user_address" placeholder="Your personal data won't be sold ;)">
 
   <label for="city">City</label>
   <input type="text" id="city" name="user_city">
@@ -59,13 +59,14 @@
 
   <label for="zip">Zip Code</label>
   <input type="text" id="zip" name="user_zip">
-  
+
   </fieldset>
 
 <hr class="second_line">
 
   <fieldset>
 
+    <div class="sign_up">
     <legend class="news">Newsletter</legend>
 
 <p>Select the newsletters you would like to receive</p>
@@ -80,6 +81,7 @@
   <input type="radio" id="plain_text" value="plain_text" name="plain_text"><label for="plain_text">Plain Text</label>
 
   <p><label class="topics" for="topics">Other topics you'd like to hear about</label></p>
+  </div>
   <textarea id="topics" name="topic_ideas"></textarea>
 
 
