Looking pretty good!

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 
 <hr class="second_line">
 
-  <fieldset>
+  <fieldset class="sign_up">
 
-    <div class="sign_up">
     <legend class="news">Newsletter</legend>
+
 
 <p>Select the newsletters you would like to receive</p>
 
@@ -81,7 +81,7 @@
   <input type="radio" id="plain_text" value="plain_text" name="plain_text"><label for="plain_text">Plain Text</label>
 
   <p><label class="topics" for="topics">Other topics you'd like to hear about</label></p>
-  </div>
+  </section>
   <textarea id="topics" name="topic_ideas"></textarea>
 
 
