--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <label for="email">Email Address</label>
   <input required type="email" id="email" name="email_address" placeholder="Required">
 
-  <label for="tel">Phone Number</label>
+  <label for="phone">Phone Number</label>
   <input type="tel" id="phone" name="phone_num" placeholder="What's yo numba?">
 
   <label for="address">Street Address</label>
@@ -81,7 +81,6 @@
   <input type="radio" id="plain_text" value="plain_text" name="plain_text"><label for="plain_text">Plain Text</label>
 
   <p><label class="topics" for="topics">Other topics you'd like to hear about</label></p>
-  </section>
   <textarea id="topics" name="topic_ideas"></textarea>
 
 
