--- a/index.html
+++ b/index.html
@@ -81,13 +81,11 @@
   <input type="radio" id="plain_text" value="plain_text" name="plain_text"><label for="plain_text">Plain Text</label>
 
   <p><label class="topics" for="topics">Other topics you'd like to hear about</label></p>
-  <textarea id="topics" name="topic_ideas"></textarea>
-
-
-
-<button type="submit">Sign Up</button>
+  <label for="text"><textarea id="topics" name="topic_ideas"></textarea></label>
 
 </fieldset>
+
+<button type="submit">Sign Up</button>
 
 </form>
 
