--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <input type="text" id="address" name="user_address" placeholder="Your personal data won't be sold ;)">
 
   <label for="city">City</label>
-  <input type="text" id="city" name="user_city">
+  <input type="text" id="city" name="user_city" placeholder="Rep your city!">
 
   <label for="state">State</label>
   <select id="state" name="user_state">
@@ -58,7 +58,7 @@
 
 
   <label for="zip">Zip Code</label>
-  <input type="text" id="zip" name="user_zip">
+  <input type="text" id="zip" name="user_zip" placeholder="Zip, zip, zip!">
 
   </fieldset>
 
@@ -80,8 +80,9 @@
   <input type="radio" id="html" value="html" name="html"><label for="html">HTML</label><br>
   <input type="radio" id="plain_text" value="plain_text" name="plain_text"><label for="plain_text">Plain Text</label>
 
-  <p><label class="topics" for="topics">Other topics you'd like to hear about</label></p>
-  <label for="text"><textarea id="topics" name="topic_ideas"></textarea></label>
+
+  <label class="topics" id="topics">Other topics you'd like to hear about</label>
+  <textarea id="topics" name="topic_ideas" placeholder="What else do you wanna see?!"></textarea>
 
 </fieldset>
 
