--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
   <label class="topics" id="topics">Other topics you'd like to hear about</label>
-  <textarea id="topics" name="topic_ideas" placeholder="What else do you wanna see?!"></textarea>
+  <textarea name="topic_ideas" placeholder="What else do you wanna see?!"></textarea>
 
 </fieldset>
 
