--- a/index.html
+++ b/index.html
@@ -25,68 +25,68 @@
 
 <form>
 
-<fieldset>
+  <fieldset>
 
-  <legend class="contact">Contact Information</legend>
+    <legend class="contact">Contact Information</legend>
 
-  <label for="name">Full Name</label>
-  <input required type="text" id="name" name="full_name" placeholder="Required">
+    <label for="name">Full Name</label>
+    <input required type="text" id="name" name="full_name" placeholder="Required">
 
-  <label for="email">Email Address</label>
-  <input required type="email" id="email" name="email_address" placeholder="Required">
+    <label for="email">Email Address</label>
+    <input required type="email" id="email" name="email_address" placeholder="Required">
 
-  <label for="phone">Phone Number</label>
-  <input type="tel" id="phone" name="phone_num" placeholder="What's yo numba?">
+    <label for="phone">Phone Number</label>
+    <input type="tel" id="phone" name="phone_num" placeholder="What's yo numba?">
 
-  <label for="address">Street Address</label>
-  <input type="text" id="address" name="user_address" placeholder="Your personal data won't be sold ;)">
+    <label for="address">Street Address</label>
+    <input type="text" id="address" name="user_address" placeholder="Your personal data won't be sold ;)">
 
-  <label for="city">City</label>
-  <input type="text" id="city" name="user_city" placeholder="Rep your city!">
+    <label for="city">City</label>
+    <input type="text" id="city" name="user_city" placeholder="Rep your city!">
 
-  <label for="state">State</label>
-  <select id="state" name="user_state">
-    <option selected="selected" value>Choose State</option>
-    <option value="alaska">AK</option>
-    <option value="california">CA</option>
-    <option value="florida">FL</option>
-    <option value="georgia">GA</option>
-    <option value="new_york">NY</option>
-    <option value="north_carolina">NC</option>
-    <option value="texas">TX</option>
-  </select>
+    <label for="state">State</label>
+    <select id="state" name="user_state">
+      <option selected="selected" value>Choose State</option>
+      <option value="alaska">AK</option>
+      <option value="california">CA</option>
+      <option value="florida">FL</option>
+      <option value="georgia">GA</option>
+      <option value="new_york">NY</option>
+      <option value="north_carolina">NC</option>
+      <option value="texas">TX</option>
+    </select>
 
 
-  <label for="zip">Zip Code</label>
-  <input type="text" id="zip" name="user_zip" placeholder="Zip, zip, zip!">
+    <label for="zip">Zip Code</label>
+    <input type="text" id="zip" name="user_zip" placeholder="Zip, zip, zip!">
+
+    </fieldset>
+
+  <hr class="second_line">
+
+    <fieldset class="sign_up">
+
+      <legend class="news">Newsletter</legend>
+
+
+  <p>Select the newsletters you would like to receive</p>
+
+    <input type="checkbox" id="news" value="html_news" name="newsletter"><label for="news">HTML News</label><br>
+    <input type="checkbox" id="css_news" value="css_news" name="newsletter"><label for="css_news">CSS News</label><br>
+    <input type="checkbox" id="javascript_news" value="javascript_news" name="newsletter"><label for="javascript_news">Javascript News</label><br>
+
+  <p>Newsletter format</p>
+
+    <input type="radio" id="html" value="html" name="html"><label for="html">HTML</label><br>
+    <input type="radio" id="plain_text" value="plain_text" name="plain_text"><label for="plain_text">Plain Text</label>
+
+
+    <label class="topics" for="topics">Other topics you'd like to hear about</label>
+    <textarea name="topic_ideas" id="topics" placeholder="What else do you wanna see?!"></textarea>
 
   </fieldset>
 
-<hr class="second_line">
-
-  <fieldset class="sign_up">
-
-    <legend class="news">Newsletter</legend>
-
-
-<p>Select the newsletters you would like to receive</p>
-
-  <input type="checkbox" id="news" value="html_news" name="newsletter"><label for="news">HTML News</label><br>
-  <input type="checkbox" id="css_news" value="css_news" name="newsletter"><label for="css_news">CSS News</label><br>
-  <input type="checkbox" id="javascript_news" value="javascript_news" name="newsletter"><label for="javascript_news">Javascript News</label><br>
-
-<p>Newsletter format</p>
-
-  <input type="radio" id="html" value="html" name="html"><label for="html">HTML</label><br>
-  <input type="radio" id="plain_text" value="plain_text" name="plain_text"><label for="plain_text">Plain Text</label>
-
-
-  <label class="topics" id="topics">Other topics you'd like to hear about</label>
-  <textarea name="topic_ideas" placeholder="What else do you wanna see?!"></textarea>
-
-</fieldset>
-
-<button type="submit">Sign Up</button>
+  <button type="submit">Sign Up</button>
 
 </form>
 
